--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,7 @@ section div button a:hover{
     color:  #feffbb;
     margin-top: 20px;
     margin-bottom: 40px;
+    font-size: 17px;
     
 }
 .card a {
