--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ section {
     align-items: center;
     padding: 85px 15%;
     background-image: url(./assets/wallpapersden.com_astronaut-skull-space-suit_2560x1080.jpg);
-    background-size: cover;
+    background-size: auto;
 
 }
 section img {
@@ -153,7 +153,7 @@ section div p {
     color: #feffbb;
     
     font-size: 28px;
-    width: 480px;
+    width: 600px;
     margin-top: 20px;
     margin-bottom: 40px;
 
@@ -191,7 +191,7 @@ section div a button:hover {
 
 .projetos {
     background-image: url(./assets/vladimir-manyukhin-2.jpg);
-    background-size: cover;
+   
     padding-top: 50px;
     padding-bottom: 100px;
 
