--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ h1 span {
 }
 
 .animacao {
-    animation: blinkcursor 500ms steps(28) normal infinite, typing 2.8s steps(28) .3s normal both;
+    animation: blinkcursor 500ms steps(28) normal infinite, typing 2.8s steps(28) 3s normal both;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -123,7 +123,7 @@ h1 span {
 }
 
 .animacao-principal{
-    animation: slide 2.2s linear forwards ;
+    animation: slide 2.2s linear forwards 1s ;
     
 }
 
@@ -250,7 +250,46 @@ section div a button:hover {
     margin-top: 100px;
 }
 
-footer {
+.knowledge{
+    background-image: url(./assets/vadim-sadovski-dex-copy.jpg);
+    background-size: cover;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    
+}
+.knowledge h2{
+    color: #ffffff;
+    text-shadow:  2px 2px 4px  #000000;;
+    font-size: 70px;
+    text-align: center;
+    padding: 15px;
+    
+}
+
+.totem{
+ 
+        background-color: #000000;
+        box-shadow: inset 5px 5px 8px  #feffbb;
+        height: 350px;
+        width: 240px;
+        border-radius: 20px;
+        padding: 30px 30px;
+        text-align: center;
+        margin-bottom: 50px;
+}
+.totem h5{
+    
+    color: #f9d004;
+    font-size: 25px;
+}
+.totem p{
+    color:  #ffffff;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    font-size: 17px;
+}
+
+.contato {
     background-image: url(./assets/91bbc8857d0625c195d6e9ed1da4191e.jpg);
     background-size: cover;
     padding-top: 100px;
@@ -262,12 +301,12 @@ footer {
     
 }
 
-footer h5{
+.contato h5{
     color: #f9d400;
     font-size: 39px;
     text-shadow:  8px 8px 10px  #000000;
 }
-footer p{
+.contato p{
     color: #ffffff;
     text-shadow:  8px 8px 10px  #000000;
     font-size: 20px;
@@ -302,3 +341,103 @@ footer p{
     transform: scale(1.3);
     transition: 1s;
 }
+
+.contato form {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    gap: 1.4rem;
+    margin: auto;
+  }
+  
+  
+  .contato form input {
+  width: 420px;
+  height: 28px;
+  padding: 20px;
+  margin-top: 30px;  
+  background: #0f0c0cf5;
+  border: 1px solid #0f0c0cf5;
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 18px;
+  letter-spacing: 1px;
+  }
+  
+  .contato form textarea {
+  height: 160px;
+  width: 420px;
+  padding: 50px;
+  background: #0f0c0cf5;
+  border: 1px solid #0f0c0cf5;
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 18px;
+  letter-spacing: 2px;
+  
+  }
+  
+  .contato form label {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0.0.0.0);
+    white-space: nowrap;
+    border-width: 0;
+  }
+  
+  .contato form button {
+  height: 50px;
+  width: 180px;
+  margin: 3rem auto;  
+  background: #f9d004;
+  border: none;
+  border-radius: 10px;
+  color: #000000;
+  font-size: 22px;
+  font-weight: 600;  
+  transition: all .6s;
+  }
+  
+  .contato form button:hover{
+  filter: brightness(0.7);
+  cursor: pointer;
+  transform: scale(0.97);
+  }
+footer {
+    height: 12px;
+    width: 100%;
+    padding: 16px;
+    text-align: center;
+    background: rgb(10, 8, 8);
+    
+  } 
+  
+  footer p {
+    font-size: 15px;
+    font-weight: 200;
+    color: #ffffff;
+    margin-bottom: 10px;
+    text-align: center;
+    justify-content: center;
+  }
+  #backToTopButton {
+    position: fixed;
+    bottom: 60px;
+    right: 50px;   
+    width: 15px;
+    height: 15px;  
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(100%);
+    transition: 200ms;
+  }
+  
+  #backToTopButton.show {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
