--- a/styles.css
+++ b/styles.css
@@ -447,3 +447,20 @@ footer {
     visibility: visible;
     transform: translateY(0);
   }
+  ::-webkit-scrollbar {
+    width: 14px;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #f9d004;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: #ffeb84;
+}
