--- a/styles.css
+++ b/styles.css
@@ -1,385 +1,343 @@
-*{
-    margin: 0 ;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;    
-    font-family: 'Josefin Sans', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Josefin Sans", sans-serif;
+}
+nav .menu-fake{
+  opacity: 0;
 }
 
 .principal-box {
+  height: 100vh;
+  width: 100%;
+  background-image: url(./assets/27-279179_imagens-para-pc-4k.jpg);
 
-    height: 100vh;
-    width: 100%;
-    background-image: url(./assets/27-279179_imagens-para-pc-4k.jpg);
-    
-    background-size: cover;
-   
+  background-size: cover;
 }
 
 nav {
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 29px;
-    padding-bottom: 100px;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 29px;
+  padding-bottom: 100px;
 }
 
 .portifolio {
-    color: #ffffff;
-    font-size: 35px;
-    font-weight: 700;
+  color: #ffffff;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 .portifolio span {
-    color: #f9d004;
+  color: #f9d004;
 }
 li {
-    color: #ffffff;
-    list-style: none;
-    display: inline-block;
-    font-size: 22px;
-    margin-right: 28px;
-    cursor: pointer;
+  color: #ffffff;
+  list-style: none;
+  display: inline-block;
+  font-size: 22px;
+  margin-right: 28px;
+  cursor: pointer;
 }
 .menu {
-    text-decoration: none;
-    color: #ffffff;
-    
+  text-decoration: none;
+  color: #ffffff;
 }
 
-.menu:hover{
-    color: #f9d004;
-    transition: 1s;
+.menu:hover {
+  color: #f9d004;
+  transition: 1s;
 }
-
 
 .meu-nome {
-    position: absolute;
-    top: 60%;
-    left: 7%;
-
+  position: absolute;
+  top: 60%;
+  left: 7%;
 }
 h1 {
-    border-right: 2px solid #ffffff;
-    color: #ffffff;
-    font-size: 80px;
-    font-weight: 700;
+  border-right: 2px solid #ffffff;
+  color: #ffffff;
+  font-size: 80px;
+  font-weight: 700;
 }
 
 h1 span {
-    color: #f9d400;
+  color: #f9d400;
 }
 
 .animacao {
-    animation: blinkcursor 500ms steps(28) normal infinite, typing 2.8s steps(28) 3s normal both;
-    white-space: nowrap;
-    overflow: hidden;
+  animation: blinkcursor 500ms steps(28) normal infinite,
+    typing 2.8s steps(28) 3s normal both;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @keyframes typing {
-    from {
-        width: 0;
-    }
-    to {
-        width: 6.6em;
-    }
+  from {
+    width: 0;
+  }
+  to {
+    width: 6.6em;
+  }
 }
 
-@keyframes blinkcursor{
-    from {
-        border-right: 2px solid #ffffff;
-    }
-    to {
-        border-right: transparent;
-
-    }
+@keyframes blinkcursor {
+  from {
+    border-right: 2px solid #ffffff;
+  }
+  to {
+    border-right: transparent;
+  }
 }
 
-.animacao-principal{
-    
-    color: #ffffff;
-    font-size: 27px;
-    font-weight: 500;
-    opacity: 0;
-   
-   
-    
- 
+.animacao-principal {
+  color: #ffffff;
+  font-size: 27px;
+  font-weight: 500;
+  opacity: 0;
 }
 
 @keyframes slide {
-    from {
-        transform: translateX(-400px) scale(4);
-        opacity: 0;
-    }
+  from {
+    transform: translateX(-400px) scale(4);
+    opacity: 0;
+  }
 
-    to {
-        
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
-.animacao-principal{
-    animation: slide 2.2s linear forwards 1s ;
-    
+.animacao-principal {
+  animation: slide 2.2s linear forwards 1s;
 }
-
-
-
-
 
 section {
-    display: flex;
-    align-items: center;
-    padding: 85px 15%;
-    background-image: url(./assets/wallpapersden.com_astronaut-skull-space-suit_2560x1080.jpg);
-    background-size: auto;
-
+  display: flex;
+  align-items: center;
+  padding: 85px 15%;
+  background-image: url(./assets/wallpapersden.com_astronaut-skull-space-suit_2560x1080.jpg);
+  background-size: auto;
 }
 section img {
-    height: 360px;
-    border-radius: 100%;
-    border: 2px solid #f9d400;
-    margin-right: 50px;
-   
-    
+  height: 360px;
+  border-radius: 100%;
+  border: 2px solid #f9d400;
+  margin-right: 50px;
 }
-
 
 section div h2 {
-    color: #ffffff;
-    font-size: 75px;
+  color: #ffffff;
+  font-size: 75px;
 }
 section div p {
-    color: #feffbb;
-    
-    font-size: 28px;
-    width: 600px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+  color: #feffbb;
 
+  font-size: 28px;
+  width: 600px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 section div button {
-
-    color: #191919;
-    background: #f9d004;
-    height: 90px;
-    width: 300px;
-    font-size: 26px;
-    font-weight: 700;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-    
-    
+  color: #191919;
+  background: #f9d004;
+  height: 90px;
+  width: 300px;
+  font-size: 26px;
+  font-weight: 700;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
 }
 
 section div a {
-    text-decoration: none;
-    color: #191919;
-    height: 90px;
-    width: 200px;
+  text-decoration: none;
+  color: #191919;
+  height: 90px;
+  width: 200px;
 }
 
 section div a button:hover {
-    background-color: #000000;
-    border: 3px solid #f9d004;
-    color: #ffffff;
-    transition: 0.8s;
+  background-color: #000000;
+  border: 3px solid #f9d004;
+  color: #ffffff;
+  transition: 0.8s;
 }
-
-
-
-    
-
-
 
 .projetos {
-    background-image: url(./assets/vladimir-manyukhin-2.jpg);
-   
-    padding-top: 50px;
-    padding-bottom: 100px;
+  background-image: url(./assets/vladimir-manyukhin-2.jpg);
 
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 .projetos h2 {
-    color: #ffffff;
-    font-size: 70px;
-    text-align: center;
-    padding: 22px;
+  color: #ffffff;
+  font-size: 70px;
+  text-align: center;
+  padding: 22px;
 }
 
 .card {
-    background-color: #000000;
-    box-shadow: inset 5px 5px 8px  #feffbb;
-    height: 380px;
-    width: 290px;
-    border-radius: 20px;
-    padding: 20px 35px;
-    text-align: center;
-    
+  background-color: #000000;
+  box-shadow: inset 5px 5px 8px #feffbb;
+  height: 380px;
+  width: 290px;
+  border-radius: 20px;
+  padding: 20px 35px;
+  text-align: center;
 }
 
 .card img {
-    height: 100px;
+  height: 100px;
 }
 .card h5 {
-    color: #ffffff;
-    font-size: 25px;
-    
+  color: #ffffff;
+  font-size: 25px;
 }
 .card p {
-    color:  #feffbb;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    font-size: 17px;
-    
+  color: #feffbb;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  font-size: 17px;
 }
 .card a {
-    background-color: #f9d400;
-    color: #191919;
-    padding: 10px 20px;
-    border-radius: 25px;
-    cursor: pointer;
-    text-decoration: none;
-
+  background-color: #f9d400;
+  color: #191919;
+  padding: 10px 20px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
 }
-.card a:hover{
-    background-color: transparent;
-    border: 2px solid #f9d400;
-    color: #ffffff;
-    transition: 0.6s;
+.card a:hover {
+  background-color: transparent;
+  border: 2px solid #f9d400;
+  color: #ffffff;
+  transition: 0.6s;
 }
 .cards {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 100px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 100px;
 }
 
-.knowledge{
-    background-image: url(./assets/vadim-sadovski-dex-copy.jpg);
-    background-size: cover;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    
+.knowledge {
+  background-image: url(./assets/vadim-sadovski-dex-copy.jpg);
+  background-size: cover;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.knowledge h2{
-    color: #ffffff;
-    text-shadow:  2px 2px 4px  #000000;;
-    font-size: 70px;
-    text-align: center;
-    padding: 15px;
-    
+.knowledge h2 {
+  color: #ffffff;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 70px;
+  text-align: center;
+  padding: 15px;
 }
-.totems{
-    display: flex;
-    justify-content: space-around;
+.totems {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.totem{
- 
-        background-color: #000000;
-        box-shadow: inset 5px 5px 8px  #feffbb;
-        height: 310px;
-        width: 220px;
-        border-radius: 20px;
-        padding: 10px 10px;
-        text-align: center;
-        margin-bottom: 50px;
+.totem {
+  background-color: #000000;
+  box-shadow: inset 5px 5px 8px #feffbb;
+  height: 310px;
+  width: 220px;
+  border-radius: 20px;
+  padding: 10px 10px;
+  text-align: center;
+  margin-bottom: 50px;
 }
-.totem h5{
-    
-    color: #f9d004;
-    font-size: 22px;  
-    border-bottom: 2px solid #f9d004;
+.totem h5 {
+  color: #f9d004;
+  font-size: 22px;
+  border-bottom: 2px solid #f9d004;
 }
-.totem p{
-    color:  #ffffff;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    font-size: 18px;
-  
+.totem p {
+  color: #ffffff;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  font-size: 18px;
 }
 
 .contato {
-    background-image: url(./assets/91bbc8857d0625c195d6e9ed1da4191e.jpg);
-    background-size: cover;
-    padding-top: 100px;
-    padding-bottom: 120px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+  background-image: url(./assets/91bbc8857d0625c195d6e9ed1da4191e.jpg);
+  background-size: cover;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.contato h5{
-    color: #f9d400;
-    font-size: 39px;
-    text-shadow:  8px 8px 10px  #000000;
+.contato h5 {
+  color: #f9d400;
+  font-size: 39px;
+  text-shadow: 8px 8px 10px #000000;
 }
-.contato p{
-    color: #ffffff;
-    text-shadow:  8px 8px 10px  #000000;
-    font-size: 20px;
-    margin-bottom: 30px;
-    margin-top: 14px;
+.contato p {
+  color: #ffffff;
+  text-shadow: 8px 8px 10px #000000;
+  font-size: 20px;
+  margin-bottom: 30px;
+  margin-top: 14px;
 }
 
-
-
-.social{
-    display: flex;
-    gap: 20px;
+.social {
+  display: flex;
+  gap: 20px;
 }
 
 .social img {
-    height: 36px;
-    border-radius: 50%;
+  height: 36px;
+  border-radius: 50%;
 }
 
 .social a {
-    background-color: #f9d400;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    cursor: pointer;
+  background-color: #f9d400;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .social a:hover {
-    transform: scale(1.3);
-    transition: 1s;
+  transform: scale(1.3);
+  transition: 1s;
 }
 
 .contato form {
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    gap: 1.4rem;
-    margin: auto;
-  }
-  
-  
-  .contato form input {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  gap: 1.4rem;
+  margin: auto;
+}
+
+.contato form input {
   width: 420px;
   height: 28px;
   padding: 20px;
-  margin-top: 30px;  
+  margin-top: 30px;
   background: #0f0c0cf5;
   border: 1px solid #0f0c0cf5;
   border-radius: 10px;
   color: #ffffff;
   font-size: 18px;
   letter-spacing: 1px;
-  }
-  
-  .contato form textarea {
+}
+
+.contato form textarea {
   height: 160px;
   width: 420px;
   padding: 50px;
@@ -389,87 +347,302 @@ section div a button:hover {
   color: #ffffff;
   font-size: 18px;
   letter-spacing: 2px;
-  
-  }
-  
-  .contato form label {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0.0.0.0);
-    white-space: nowrap;
-    border-width: 0;
-  }
-  
-  .contato form button {
+}
+
+.contato form label {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0.0.0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.contato form button {
   height: 50px;
   width: 180px;
-  margin: 3rem auto;  
+  margin: 3rem auto;
   background: #f9d004;
   border: none;
   border-radius: 10px;
   color: #000000;
   font-size: 22px;
-  font-weight: 600;  
-  transition: all .6s;
-  }
-  
-  .contato form button:hover{
+  font-weight: 600;
+  transition: all 0.6s;
+}
+
+.contato form button:hover {
   filter: brightness(0.7);
   cursor: pointer;
   transform: scale(0.97);
-  }
+}
 footer {
-    height: 12px;
-    width: 100%;
-    padding: 16px;
-    text-align: center;
-    background: rgb(10, 8, 8);
-    
-  } 
-  
-  footer p {
-    font-size: 15px;
-    font-weight: 200;
-    color: #ffffff;
-    margin-bottom: 10px;
-    text-align: center;
-    justify-content: center;
-  }
-  #backToTopButton {
-    position: fixed;
-    bottom: 60px;
-    right: 50px;   
-    width: 15px;
-    height: 15px;  
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(100%);
-    transition: 200ms;
-  }
-  
-  #backToTopButton.show {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-  }
-  ::-webkit-scrollbar {
-    width: 14px;
-    cursor: pointer;
+  height: 12px;
+  width: 100%;
+  padding: 16px;
+  text-align: center;
+  background: rgb(10, 8, 8);
+}
+
+footer p {
+  font-size: 15px;
+  font-weight: 200;
+  color: #ffffff;
+  margin-bottom: 10px;
+  text-align: center;
+  justify-content: center;
+}
+#backToTopButton {
+  position: fixed;
+  bottom: 60px;
+  right: 50px;
+  width: 15px;
+  height: 15px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+::-webkit-scrollbar {
+  width: 14px;
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #f9d004;
-    border-radius: 20px;
+  background-color: #f9d004;
+  border-radius: 20px;
 }
 
-::-webkit-scrollbar-thumb:hover{
-    background-color: #ffeb84;
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ffeb84;
+}
+
+@media (max-width: 500px) {
+body{
+  overflow-x: hidden;
+}
+  .menu-mobile {
+    display: none;
+  }
+
+  nav {
+    display: flex;
+  }
+
+  nav .menu-fake {
+    position: absolute;
+    z-index: 1000;
+    width: 30px;
+    height: 30px;
+    right: 8px;
+    top: 19px;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  nav .menu-lines {
+    position: absolute;
+    z-index: 999;
+    width: 30px;
+    height: 30px;
+    right: 15px;
+    top: 19px;
+  }
+
+  nav .menu-lines span {
+    display: block;
+    width: 30px;
+    height: 4px;
+    margin-bottom: 7px;
+    background-color: #f9d004;
+    border-radius: 3px;
+    transition: 0.2s;
+  }
+
+  nav .menu-fake:checked ~ .menu-lines span {
+    background-color: #ffffff;
+  }
+  nav .menu-fake:checked ~ .menu-lines span:nth-child(1) {
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.12);
+  }
+  nav .menu-fake:checked ~ .menu-lines span:nth-child(2) {
+    opacity: 0;
+  }
+  nav .menu-fake:checked ~ .menu-lines span:nth-child(3) {
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg) scaleX(1.12);
+  }
+
+  nav ul {
+    position: absolute;
+    z-index: 998;
+    right: 0;
+    top: 0;
+    width: 200px;
+    height: calc(70vh - 100px);
+    padding-top: 80px;
+    padding-left: 25px;
+    background-color: #f9d004;
+    border-radius: 8px;
+    margin-right: -300px;
+    
+  }
+  nav ul li {
+    border-top: 1px solid #000000;
+    text-align: center;
+    padding-top: 15px;
+    font-weight: 700;
+    text-shadow: 2px 2px #000000;
+    
+  }
+
+  nav .menu-fake:checked ~ .menu-mobile {
+    display: grid;
+    margin-right: 0;
+  }
+
+  .portifolio {
+    color: #ffffff;
+    font-size: 22px;
+    font-weight: 700;
+  }
+
+  .portifolio span {
+    color: #f9d004;
+  }
+
+  h1.animacao {
+    font-size: 45px;
+  }
+  
+  #sobre{
+    height: 100vh;
+    
+  }
+
+  #sobre img{
+    
+    position: absolute;
+    height: 240px;
+    left: 80px;
+    top: 800px;
+   
+  }
+  #sobre h2{
+    
+    font-size: 35px;
+    position: absolute;
+    left:100px;
+   top: 760px;
+    color: #ffffff;
+    
+  }
+  #sobre p{
+    position: absolute;
+    top: 1050px;
+    font-size: 20px;
+    width: 80vw;
+  }
+  #sobre button {
+    position: absolute;
+    top: 1400px;
+    left: 35px;
+    height: 50px;
+    font-size: 20px;
+  }
+
+  .projetos {
+    height: 170vh;
+    background-size: cover;
+    
+  }
+  .projetos h2{
+    position: absolute;
+    font-size: 30px;
+    left: 35px;
+
+  }
+
+  .projetos .cards{
+    
+    position: absolute;
+    width: 20px;
+    height: 2px;
+    top: 1500px;
+    left: 160px;
+    display: grid;
+    
+    
+  }
+  .projetos .card{    
+    margin-top: 15px;
+    height: min-content;
+    
+
+  }
+
+  .projetos .card img{
+    height: 50px;
+    width: 45px;
+    
+  }
+  .projetos .card svg{
+    height: 50px;
+    width: 45px;
+    
+  }
+  .projetos .card h5{
+    font-size: 15px;
+  }
+  .projetos .card p{
+    font-size: 15px;
+  }
+  .projetos .card button{
+    height: 20px;
+  }
+
+  .knowledge{
+    height: 110vh;
+  }
+  .knowledge h2{
+    font-size: 30px;
+
+  }
+  .knowledge .totem{
+    width: 100px;
+    height: 175px;
+    justify-content: space-around;
+    
+  }
+  .knowledge .totem svg{
+    height: 30px;
+    width: 30px;
+  }
+  .knowledge .totem h5{
+    font-size: 15px;
+  }
+  .knowledge .totem p{
+    font-size: 9.1px;
+  }
+
+  
+
+
+
+
+
 }
